# swagger.yaml
@@ -9,11 +9,50 @@ servers:
 tags:
   - name: Animes
     description: Operations related to animes
-  - name: Users
-    description: Operations related to users
+  - name: Auth
+    description: Operations related to authentication
   - name: History
     description: Operations related to user history
 paths:
+  /users/signup:
+    post:
+      summary: Signup a new user
+      tags:
+        - Auth
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UserInput'
+      responses:
+        201:
+          description: User created successfully
+        500:
+          description: Server error
+  /users/login:
+    post:
+      summary: Login a user
+      tags:
+        - Auth
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                email:
+                  type: string
+                password:
+                  type: string
+      responses:
+        200:
+          description: User logged in successfully
+        401:
+          description: Incorrect email or password
+        500:
+          description: Server error
   /animes:
     get:
       summary: Get all animes
@@ -376,6 +415,8 @@ paths:
       summary: Create a new anime
       tags:
         - Animes
+      security:
+        - bearerAuth: []
       requestBody:
         required: true
         content:
@@ -385,6 +426,8 @@ paths:
       responses:
         201:
           description: Anime created successfully
+        401:
+          description: Unauthorized
         500:
           description: Server error
   /animes/{id}:
@@ -392,6 +435,8 @@ paths:
       summary: Update an anime by ID
       tags:
         - Animes
+      security:
+        - bearerAuth: []
       parameters:
         - in: path
           name: id
@@ -408,6 +453,8 @@ paths:
       responses:
         200:
           description: Anime updated successfully
+        401:
+          description: Unauthorized
         404:
           description: Anime not found
         500:
@@ -416,6 +463,8 @@ paths:
       summary: Delete an anime by ID
       tags:
         - Animes
+      security:
+        - bearerAuth: []
       parameters:
         - in: path
           name: id
@@ -426,133 +475,10 @@ paths:
       responses:
         204:
           description: Anime deleted successfully
+        401:
+          description: Unauthorized
         404:
           description: Anime not found
-        500:
-          description: Server error
-  /users:
-    get:
-      summary: Get all users
-      tags:
-        - Users
-      parameters:
-        - in: query
-          name: page
-          schema:
-            type: integer
-            default: 1
-          description: Page number
-        - in: query
-          name: limit
-          schema:
-            type: integer
-            default: 25
-          description: Number of items per page
-        - in: query
-          name: sort
-          schema:
-            type: string
-            enum: [asc, desc]
-            default: desc
-          description: Sort order (asc or desc)
-      responses:
-        200:
-          description: A list of users
-        500:
-          description: Server error
-    post:
-      summary: Create a new user
-      tags:
-        - Users
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/UserInput'
-      responses:
-        201:
-          description: User created successfully
-        500:
-          description: Server error
-  /users/{id}:
-    get:
-      summary: Get user by ID
-      tags:
-        - Users
-      parameters:
-        - in: path
-          name: id
-          schema:
-            type: string
-          required: true
-          description: ID of the user to retrieve
-      responses:
-        200:
-          description: Details of a single user
-        404:
-          description: User not found
-        500:
-          description: Server error
-    patch:
-      summary: Update a user by ID
-      tags:
-        - Users
-      parameters:
-        - in: path
-          name: id
-          schema:
-            type: string
-          required: true
-          description: ID of the user to update
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/UserInput'
-      responses:
-        200:
-          description: User updated successfully
-        404:
-          description: User not found
-        500:
-          description: Server error
-    delete:
-      summary: Delete a user by ID
-      tags:
-        - Users
-      parameters:
-        - in: path
-          name: id
-          schema:
-            type: string
-          required: true
-          description: ID of the user to delete
-      responses:
-        204:
-          description: User deleted successfully
-        404:
-          description: User not found
-        500:
-          description: Server error
-  /users/check/{email}:
-    get:
-      summary: Check user by email
-      tags:
-        - Users
-      parameters:
-        - in: path
-          name: email
-          schema:
-            type: string
-          required: true
-          description: Email of the user to check
-      responses:
-        200:
-          description: User found
-        404:
-          description: User not found
         500:
           description: Server error
   /history/{userId}/history:
@@ -831,3 +757,8 @@ components:
             type: integer
         lastEpisode:
           type: integer
+  securitySchemes:
+    bearerAuth:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
